# vector2math

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: circle.rs  group.rs  lib.rs  rectangle.rs  scalar.rs  simd.rs  transform.rs
