[dependencies.packed_simd]
optional = true
version = '0.3.3'

[features]
default = []
simd = ['packed_simd']

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = ['rust-patterns', 'algorithms']
description = 'Traits for doing 2D vector geometry operations using standard types'
documentation = 'https://docs.rs/vector2math/'
edition = '2018'
keywords = ['math', 'geometry', 'vector', '2D']
license = 'MIT'
name = 'vector2math'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/vector2math'
version = '0.10.3'

[package.metadata.docs.rs]
features = ['simd']
